<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/message"
        android:title="@string/action_hot_deals"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_message_black_24dp">
    </item>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp">
    </item>

    <item
        android:id="@+id/action_cart"
        android:title="@string/action_cart"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_credit_card_black_24dp">
    </item>


</menu>
